--- a/build.gradle
+++ b/build.gradle
@@ -28,11 +28,17 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.8'
     annotationProcessor 'org.projectlombok:lombok:1.18.8'
 
+    compile("org.springframework.boot:spring-boot-starter")
     compile("org.springframework.boot:spring-boot-starter-web")
-    compile('org.axonframework:axon-spring-boot-starter:3.2')
-    compile('org.axonframework:axon-mongo:3.2')
+    compile("org.springframework.boot:spring-boot-starter-data-jpa")
+    compile("org.springframework.boot:spring-boot-starter-actuator")
+    compile('org.axonframework:axon-spring-boot-starter:4.0.3')
 
-    testCompile('org.axonframework:axon-test:3.2')
+    runtime('com.h2database:h2')
+
+//    compile('org.axonframework:axon-mongo:3.2')
+
+    testCompile('org.axonframework:axon-test:4.0.3')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 
 }
